Actualiza el contenido de Lab 5 para mejorar la descripción del objetivo, enfatizando la implementación de capacidades de monitoreo del sistema y optimización de recursos en el juego Snake. Añade un enlace a Lab 5 en la página principal y descomenta el botón de visualización.

--- a/src/content/docs/guides/labTimeline.mdx
+++ b/src/content/docs/guides/labTimeline.mdx
@@ -81,7 +81,7 @@ import {
     <p><strong>Objective:</strong> Integrate all previous modules into a single multitasking system.</p>
     <p><strong>Highlights:</strong> FreeRTOS task coordination, inter-task communication, performance monitor,
     and adaptive Snake gameplay.</p>
-  {/* <LinkButton href="/labs/lab5/" target="_blank">View Lab 5 →</LinkButton> */}
+  <LinkButton href="/labs/lab5/" target="_blank">View Lab 5 →</LinkButton>
   </Card>
 
 </CardGrid>
