--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -61,6 +61,11 @@ import freertos from '../../assets/freertos.png';
     description="Enhance the Snake game with advanced timing, synchronization, and performance analysis."
     href="/labs/lab4/"
   />
+  <LinkCard
+    title="Lab 5 – Debug Display"
+    description="Transform the Snake game into a debugging platform with system monitoring and optimization features."
+    href="/labs/lab5/"
+  />
 </CardGrid>
 
 <Aside type="tip" title="What is an RTOS?">
