--- a/src/content/docs/labs/lab5.mdx
+++ b/src/content/docs/labs/lab5.mdx
@@ -27,7 +27,7 @@ import { Steps } from '@astrojs/starlight/components';
 
 ## Objective
 
-Transform your Snake game into a **professional debugging platform** by implementing system monitoring that reveals CPU usage, memory consumption, and optimization opportunities. Learn the debugging techniques used in commercial embedded systems.
+Build on your Lab 4 Snake game by adding system monitoring capabilities to track CPU usage, stack memory consumption, and task performance. You'll implement FreeRTOS runtime statistics to measure how efficiently your tasks execute and optimize memory allocation based on actual usage patterns.
 
 ---
 
