Actualiza las instrucciones de configuración de FreeRTOS en Lab 5, añadiendo advertencias sobre la redefinición de macros y el uso de Timer0. Modifica la configuración de macros para mejorar la medición del tiempo de ejecución.

--- a/src/content/docs/labs/lab5.mdx
+++ b/src/content/docs/labs/lab5.mdx
@@ -86,22 +86,18 @@ Write down your prediction—you'll test it!
 Avoid redefining these macros if they already exist in your `FreeRTOSConfig.h` file. Duplicate definitions will cause errors.
 </Aside>
 
-
-<Aside type="danger">
-We are assuming you are using Timer0 configured in Lab 4 to measure execution time. Make sure the `micros()` function is correctly implemented and returns time in microseconds.
-</Aside>
-
 Add these lines to your `FreeRTOSConfig.h`:
 
 ```c
-#define configGENERATE_RUN_TIME_STATS       1
-#define configUSE_STATS_FORMATTING_FUNCTIONS 1
-#define configUSE_TRACE_FACILITY            1
+#define configGENERATE_RUN_TIME_STATS 1
+#define configUSE_TRACE_FACILITY     1
 
-// Use your existing Timer0 from Lab 4
-extern uint32_t micros(void);
-#define portCONFIGURE_TIMER_FOR_RUN_TIME_STATS()  
-#define portGET_RUN_TIME_COUNTER_VALUE()           micros()
+#define configUSE_STATS_FORMATTING_FUNCTIONS 1
+
+
+#define portCONFIGURE_TIMER_FOR_RUN_TIME_STATS()   // vacío
+#define portGET_RUN_TIME_COUNTER_VALUE() (xTaskGetTickCount())
+
 ```
 
 **Step 2: Understanding the Data**
