Actualiza las instrucciones de Lab 5 para reducir el tiempo de ejecución del juego a 1 minuto durante la recolección de datos de uso de pila.

--- a/src/content/docs/labs/lab5.mdx
+++ b/src/content/docs/labs/lab5.mdx
@@ -180,7 +180,7 @@ Look for `uxTaskGetStackHighWaterMark()`. What parameter does it need?
 
 <Steps>
 
-1. **Run your game for 5 minutes** while playing actively
+1. **Run your game for 1 minute** while playing actively
 2. **Record the minimum high water mark** you observe for each task  
 3. **Calculate actual usage:** `Used = Allocated - High_Water_Mark`
 4. **Design new stack sizes:** `New_Size = Used + Safety_Margin`
